--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.1",
+    "multer": "^1.4.5-lts.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.14.2"
   }
 }
